--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -54,27 +54,19 @@ jobs:
           which bash
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
           echo NUMBER_OF_PROCESSORS=$NUMBER_OF_PROCESSORS
-      - name: Update PATH (wrong bash in path by default, sad seems hard to update path in github actions)
-        shell: "cmd"
-        run: |
-          echo PATH=%PATH%
-          echo GITHUB_PATH=%GITHUB_PATH%
-          echo "wherebash:" && where bash
-      - name: Update PATH (wrong bash in path by default, sad seems hard to update path in github actions)
-        shell: "cmd"
-        run: |
-          set PATH="c:/Program Files/git/usr/bin/;%PATH%"
+      # - name: Update PATH (wrong bash in path by default, sad seems hard to update path in github actions)
+      #   shell: "cmd"
+      #   run: |
+      #     echo PATH=%PATH%
+      #     echo GITHUB_PATH=%GITHUB_PATH%
+      #     echo "wherebash:" && where bash
+      # - name: Update PATH (wrong bash in path by default, sad seems hard to update path in github actions)
+      #   shell: "cmd"
+      #   run: |
+      #     set PATH="c:/Program Files/git/usr/bin/;%PATH%"
       - name: Build Windows Container Images
         shell: "bash"
         run: |
-          echo "wherebash:" && which bash
-          make --directory DockerBuildContainers pull-base-images
-          make --directory DockerBuildContainers build-images
-          make --directory DockerBuildContainers tag-images
-      - name: Build Windows Container Images
-        shell: "cmd"
-        run: |
-          echo "wherebash:" && where bash
           make --directory DockerBuildContainers pull-base-images
           make --directory DockerBuildContainers build-images
           make --directory DockerBuildContainers tag-images
