--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -43,6 +43,12 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
+      - uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            base-devel
+            git
       - uses: actions/checkout@v3
       - name: Build System Info
         shell: "bash"
