--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -49,6 +49,7 @@ jobs:
           install: >-
             base-devel
             git
+            make
       - uses: actions/checkout@v3
       - name: Build System Info
         shell: "bash"
