--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -25,9 +25,9 @@ jobs:
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
       - name: Build Linux Container Images
         run: |
-          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers pull-base-images
-          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers build-images
-          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers tag-images
+          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers --no-print-directory pull-base-images
+          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers --no-print-directory build-images
+          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers --no-print-directory tag-images
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push Linux Container Images
         run: |
-          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers push-images
+          DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers --no-print-directory push-images
 
   build-Windows:
     runs-on: windows-latest
@@ -85,9 +85,9 @@ jobs:
       - name: Build Windows Container Images
         # shell: "bash"
         run: |
-          make --directory DockerBuildContainers pull-base-images
-          make --directory DockerBuildContainers build-images
-          make --directory DockerBuildContainers tag-images
+          make --directory DockerBuildContainers --no-print-directory pull-base-images
+          make --directory DockerBuildContainers --no-print-directory build-images
+          make --directory DockerBuildContainers --no-print-directory tag-images
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -95,4 +95,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push Windows Container Images
         run: |
-          make --directory DockerBuildContainers push-images
+          make --directory DockerBuildContainers --no-print-directory push-images
