install dos2unix in docker builder contaeiner for unix

--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -24,8 +24,8 @@ jobs:
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
       - name: Install Tools
         run: |
-          DEBIAN_FRONTEND=noninteractive apt-get update
-          DEBIAN_FRONTEND=noninteractive apt-get install dos2unix
+          DEBIAN_FRONTEND=noninteractive sudo apt-get update
+          DEBIAN_FRONTEND=noninteractive sudo apt-get install dos2unix
       - name: Build Linux Container Images
         run: |
           DEBIAN_FRONTEND=noninteractive make --directory DockerBuildContainers --no-print-directory pull-base-images
