--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -62,9 +62,10 @@ jobs:
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
           echo NUMBER_OF_PROCESSORS=$NUMBER_OF_PROCESSORS
       - name: Build Windows Container Images
+        # Broken in parts due to disk space limit @todo add msys build
         run: |
           make --directory DockerBuildContainers --no-print-directory pull-base-images
-          make --directory DockerBuildContainers --no-print-directory build-images
+          make --directory DockerBuildContainers --no-print-directory sophistsolutionsinc/stroika-buildvm-windows-cygwin-vs2k22
           make --directory DockerBuildContainers --no-print-directory tag-images
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
